--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# C Control, M Meta/Alt 
+# C Control, M Meta/Alt
 
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -16,7 +16,7 @@ bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
 bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
 
-# To copy, left click and drag to highlight text in yellow, 
+# To copy, left click and drag to highlight text in yellow,
 # once you release left click yellow text will disappear and will automatically be available in clibboard
 # # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -41,13 +41,12 @@ bind -n C-j select-pane -D
 # Set terminal status color
 set -g default-terminal "screen-256color"
 
-set -g status-bg colour88
-set -g status-fg white
+set -g status-bg colour10
+set -g status-fg black
 
-# Set terminal pane color 
+# Set terminal pane color
 set -g pane-border-style fg=white
-set -g pane-active-border-style "bg=default fg=colour88"
+set -g pane-active-border-style "bg=default fg=colour10"
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf
-
